criando a pagina de produtos

--- a/index.html
+++ b/index.html
@@ -41,6 +41,82 @@
             <section class="lista__produtos">
             </section>
         </section>
+        <section class="Produto__detalhes">
+            <div class="Produto__detalhes_imagens">
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+                <figure>
+                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                </figure>
+            </div>
+            <div class="Produto__detalhes_info">
+                <div class="detalhes">
+                    <h4>nome dp produto</h4>
+                    <h5>descrição</h5>
+                    <h6>preço</h6>
+                </div>
+                <div class="tamanho">
+                    <h5>Tamanho</h5>
+                    <div class="tamanhos">
+                        38 até 51
+                    </div>
+                </div>
+                <div class="botao">
+                    <button type="button">Adicionar ao Carrinho</button>
+                </div>
+                <div class="descricao">
+                    <p>
+                        Inspirado no AJ1 original, essa edição cano medio mantem o
+                        visual iconico que voce ama, enquanto a escolha de cores
+                        e o couro conferem uma identidade distinta.
+                    </p>
+                    <p>
+                        Benefícios
+                    </p>
+                            <ul>
+                                <li>Cabedal em material genuino, sintético e tecido para
+                                    sensação de suporte.
+                                </li>
+                                <li>Entressola de espuma e amortecimento Nike Air proporcionam
+                                    maior conforto e leveza.
+                                </li>
+                                <li>Solado de borracha com ponto de giro cria tração duradoura.
+                                </li>
+                            </ul>
+                </div>
+                <details class="frete">
+                    <summary class="icone-expandir">Calcular Frete e Entrega</summary>
+                    <p>Calcular o frete e o prazo de entrega estimados para sua
+                    região.</p>
+                    <label for="">Insira o seu Cep</label>
+                    <div class="input">
+                        <input type="text" placeholder="00000-000" />
+                        <button type="button">Calcular</button>
+                    </div>
+                    <a href="https://buscacepinter.correios.com.br/app/endereco/index.php" target="_blank" rel="noopener noreferrer">Não sei meu cep
+                    </a>
+                </details>
+            </div>
+        </section>
     </main>
     <script src="Js/script.js"></script>
 </body>
