crição das funcionalidades do card e do botao voltar

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <section class="lista__produtos">
             </section>
         </section>
+        
+        <section class="voltar">Voltar</section>
+
         <section class="Produto__detalhes">
             <div class="Produto__detalhes_imagens">
                 <figure>
