--- a/index.html
+++ b/index.html
@@ -41,34 +41,34 @@
             <section class="lista__produtos">
             </section>
         </section>
-        
+
         <section class="voltar">Voltar</section>
 
         <section class="Produto__detalhes">
             <div class="Produto__detalhes_imagens">
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
                 <figure>
-                    <img src="./Imagens/air-jordan-1-mid-dutch-green-1-400.png" alt="" />
+                    <img src="https://placeholder.co/300x200" alt="" />
                 </figure>
             </div>
             <div class="Produto__detalhes_info">
@@ -80,7 +80,44 @@
                 <div class="tamanho">
                     <h5>Tamanho</h5>
                     <div class="tamanhos">
-                        38 até 51
+                        <input class="radio" type="radio" name="size" id="size38" value="38">
+                        <label for="size38" class="numeros">38</label>
+
+                        <input class="radio" type="radio" name="size" id="size39" value="39">
+                        <label for="size39" class="numeros">39</label>
+
+                        <input class="radio" type="radio" name="size" id="size40" value="40">
+                        <label for="size40" class="numeros">40</label>
+
+                        <input class="radio" type="radio" name="size" id="size41" value="41">
+                        <label for="size41" class="numeros">41</label>
+
+                        <input class="radio" type="radio" name="size" id="size42" value="42">
+                        <label for="size42" class="numeros">42</label>
+
+                        <input class="radio" type="radio" name="size" id="size43" value="43">
+                        <label for="size43" class="numeros">43</label>
+
+                        <input class="radio" type="radio" name="size" id="size44" value="44">
+                        <label for="size44" class="numeros">44</label>
+
+                        <input class="radio" type="radio" name="size" id="size45" value="45">
+                        <label for="size45" class="numeros">45</label>
+
+                        <input class="radio" type="radio" name="size" id="size46" value="46">
+                        <label for="size46" class="numeros">46</label>
+
+                        <input class="radio" type="radio" name="size" id="size47" value="47">
+                        <label for="size47" class="numeros">47</label>
+
+                        <input class="radio" type="radio" name="size" id="size48" value="48">
+                        <label for="size48" class="numeros">48</label>
+
+                        <input class="radio" type="radio" name="size" id="size49" value="49">
+                        <label for="size49" class="numeros">49</label>
+
+                        <input class="radio" type="radio" name="size" id="size50" value="50">
+                        <label for="size50" class="numeros">50</label>
                     </div>
                 </div>
                 <div class="botao">
