inserindo dados ao carrinho, cfiando a função de apagar itens

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <label for="size50" class="numeros">50</label>
                     </div>
                 </div>
-                <div class="botao">
+                <div class="btn__add_cart">
                     <button type="button">Adicionar ao Carrinho</button>
                 </div>
                 <div class="descricao">
